@@ -18,6 +18,7 @@ def STORE_ATTR(op):            return dis.opname[op] == 'STORE_ATTR'
 def STORE_FAST(op):            return dis.opname[op] == 'STORE_FAST'
 def STORE_NAME(op):            return dis.opname[op] == 'STORE_NAME'
 def STORE_GLOBAL(op):          return dis.opname[op] == 'STORE_GLOBAL'
+def STORE_SUBSCR(op):          return dis.opname[op] == 'STORE_SUBSCR'
 def CALL_FUNCTION(op):         return dis.opname[op] == 'CALL_FUNCTION'
 def IMPORT_NAME(op):           return dis.opname[op] == 'IMPORT_NAME'
 def IMPORT_FROM(op):           return dis.opname[op] == 'IMPORT_FROM'
